# local_swe_harness

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  langgraph.json  pyproject.toml
.codex/: README.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  containers.yml  dependency-review.yml  docs.yml  evaluations.yml  graph-tests.yml  labeler.yml  release.yml  security.yml
apps/orchestrator/: pyproject.toml
apps/orchestrator/src/swe_agents/: __init__.py  settings.py  state.py
apps/orchestrator/src/swe_agents/agents/: architect.py  cloud_engineer.py  coder.py  critic.py  navigator.py  reviewer.py  router.py
apps/orchestrator/src/swe_agents/api/: app.py  routes.py  streaming.py
apps/orchestrator/src/swe_agents/context/: __init__.py  compressor.py  dependency_graph.py  file_selector.py  repository.py  symbol_index.py
apps/orchestrator/src/swe_agents/graphs/: main.py
apps/orchestrator/src/swe_agents/nodes/: approval.py  assessment.py  context.py  finalization.py  implementation.py  intake.py  planning.py  review.py  verification.py
apps/orchestrator/src/swe_agents/observability/: cost_tracking.py  events.py  metrics.py  tracing.py
apps/orchestrator/src/swe_agents/persistence/: __init__.py  checkpoints.py  memory.py  repositories.py  task_history.py
apps/orchestrator/src/swe_agents/routing/: __init__.py  complexity.py  escalation.py  policies.py  scoring.py
apps/orchestrator/src/swe_agents/security/: __init__.py  approval_policy.py  command_policy.py  path_policy.py  redaction.py
apps/orchestrator/src/swe_agents/verification/: __init__.py  lint_runner.py  pipeline.py  quality_gate.py  test_runner.py  typecheck_runner.py
apps/orchestrator/tests/: conftest.py
apps/orchestrator/tests/fixtures/: conftest.py
apps/orchestrator/tests/graph/: test_fake_client.py
apps/orchestrator/tests/unit/: test_registry.py  test_routing.py  test_security.py
config/: evaluation.yaml  models.yaml  routing.yaml  security.yaml  tools.yaml
config/environments/: local.yaml  production.yaml  test.yaml
docs/: architecture.md  deployment.md  evaluation.md  github-settings-checklist.md  graph-state.md  model-roles.md  routing-policy.md  sandbox-security.md
docs/adr/: 0001-tiered-model-routing.md  0002-model-swap-gateway.md  0003-sandboxed-execution.md
evals/: run_evals.py
evals/datasets/: escalation_cases.jsonl  patch_cases.jsonl  review_cases.jsonl  routing_cases.jsonl
evals/scorers/: escalation_cost.py  patch_correctness.py  routing_accuracy.py  tool_efficiency.py
infra/docker/: Dockerfile.model_gateway  Dockerfile.orchestrator
prompts/architect/: system.md
prompts/cloud/: system.md
prompts/coder/: system.md
prompts/critic/: system.md
prompts/navigator/: system.md
prompts/reviewer/: system.md
prompts/router/: examples.yaml  system.md
scripts/: bootstrap.sh  build_repo_index.py  configure_github.sh  download_models.py  run_agent.py  run_evals.py  start_local_stack.py
services/model_gateway/: pyproject.toml
services/model_gateway/src/model_gateway/: __init__.py  app.py  health.py  loader.py  registry.py  scheduler.py
services/model_gateway/src/model_gateway/backends/: cloud.py  llamacpp.py  lmstudio.py  ollama.py
services/repo_indexer/: pyproject.toml
services/repo_indexer/src/repo_indexer/: __init__.py  chunks.py  imports.py  indexer.py  storage.py  symbols.py
services/sandbox_worker/: Dockerfile  pyproject.toml
services/sandbox_worker/src/sandbox_worker/: __init__.py  allowlist.py  executor.py  limits.py  patching.py  worker.py  worktrees.py
tests/: test_architecture.py
tests/end_to_end/: test_fake_e2e.py
