[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swe-agents"
version = "0.1.0"
description = "Tiered SWE orchestrator graphs and agents"
requires-python = ">=3.12"
dependencies = [
  "contracts",
  "model-clients",
  "tool-clients",
  "langgraph>=0.2",
  "langchain-core>=0.2",
  "pydantic>=2.7",
  "structlog>=24.1",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "anyio>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/swe_agents"]
