[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-gateway"
version = "0.1.0"
description = "Model-capability registry and routing gateway"
requires-python = ">=3.12"
dependencies = [
  "contracts",
  "pydantic>=2.7",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/model_gateway"]
