[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-indexer"
version = "0.1.0"
description = "Repository symbol and dependency indexer"
requires-python = ">=3.12"
dependencies = [
  "contracts",
  "pydantic>=2.7",
  "structlog>=24.1",
  "tree-sitter>=0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/repo_indexer"]
