[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox-worker"
version = "0.1.0"
description = "Sandboxed code execution worker"
requires-python = ">=3.12"
dependencies = [
  "contracts",
  "pydantic>=2.7",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_worker"]
